Compiler_Lab1/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> ExtDefList
Rule 2     ExtDefList -> ExtDef ExtDefList
Rule 3     ExtDefList -> empty
Rule 4     ExtDef -> Specifier SEMI
Rule 5     ExtDef -> Specifier FunDec CompSt
Rule 6     ExtDef -> Specifier ExtDecList SEMI
Rule 7     ExtDecList -> VarDec
Rule 8     ExtDecList -> VarDec COMMA ExtDecList
Rule 9     Specifier -> TYPE
Rule 10    Specifier -> StructSpecifier
Rule 11    StructSpecifier -> STRUCT OptTag LC DefList RC
Rule 12    StructSpecifier -> STRUCT Tag
Rule 13    OptTag -> ID
Rule 14    OptTag -> empty
Rule 15    Tag -> ID
Rule 16    VarDec -> ID
Rule 17    VarDec -> VarDec LB INT RB
Rule 18    FunDec -> ID LP VarList RP
Rule 19    FunDec -> ID LP RP
Rule 20    VarList -> ParamDec COMMA VarList
Rule 21    VarList -> ParamDec
Rule 22    ParamDec -> Specifier VarDec
Rule 23    CompSt -> LC DefList StmtList RC
Rule 24    StmtList -> Stmt StmtList
Rule 25    StmtList -> empty
Rule 26    Stmt -> Exp SEMI
Rule 27    Stmt -> CompSt
Rule 28    Stmt -> IF LP Exp RP Stmt
Rule 29    Stmt -> WHILE LP Exp RP Stmt
Rule 30    Stmt -> IF LP Exp RP Stmt ELSE Stmt
Rule 31    Stmt -> RETURN Exp SEMI
Rule 32    DefList -> Def DefList
Rule 33    DefList -> empty
Rule 34    Def -> Specifier DecList SEMI
Rule 35    DecList -> Dec
Rule 36    DecList -> Dec COMMA DecList
Rule 37    Dec -> VarDec
Rule 38    Dec -> VarDec ASSIGNOP Exp
Rule 39    Exp -> Exp ASSIGNOP Exp
Rule 40    Exp -> Exp AND Exp
Rule 41    Exp -> Exp OR Exp
Rule 42    Exp -> Exp RELOP Exp
Rule 43    Exp -> Exp PLUS Exp
Rule 44    Exp -> Exp MINUS Exp
Rule 45    Exp -> Exp STAR Exp
Rule 46    Exp -> Exp DIV Exp
Rule 47    Exp -> LP Exp RP
Rule 48    Exp -> MINUS Exp
Rule 49    Exp -> NOT Exp
Rule 50    Exp -> ID LP Args RP
Rule 51    Exp -> ID LP RP
Rule 52    Exp -> Exp LB Exp RB
Rule 53    Exp -> Exp DOT ID
Rule 54    Exp -> ID
Rule 55    Exp -> INT
Rule 56    Exp -> FLOAT
Rule 57    Args -> Exp COMMA Args
Rule 58    Args -> Exp
Rule 59    empty -> <empty>
Rule 60    ExtDef -> error SEMI
Rule 61    FunDec -> error RP
Rule 62    CompSt -> error RC
Rule 63    Stmt -> error SEMI
Rule 64    Def -> Specifier error SEMI

Terminals, with rules where they appear

AND                  : 40
ASSIGNOP             : 38 39
COMMA                : 8 20 36 57
DIV                  : 46
DOT                  : 53
ELSE                 : 30
FLOAT                : 56
ID                   : 13 15 16 18 19 50 51 53 54
IF                   : 28 30
INT                  : 17 55
LB                   : 17 52
LC                   : 11 23
LP                   : 18 19 28 29 30 47 50 51
MINUS                : 44 48
NOT                  : 49
OR                   : 41
PLUS                 : 43
RB                   : 17 52
RC                   : 11 23 62
RELOP                : 42
RETURN               : 31
RP                   : 18 19 28 29 30 47 50 51 61
SEMI                 : 4 6 26 31 34 60 63 64
STAR                 : 45
STRUCT               : 11 12
TYPE                 : 9
WHILE                : 29
error                : 60 61 62 63 64

Nonterminals, with rules where they appear

Args                 : 50 57
CompSt               : 5 27
Dec                  : 35 36
DecList              : 34 36
Def                  : 32
DefList              : 11 23 32
Exp                  : 26 28 29 30 31 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 48 49 52 52 53 57 58
ExtDecList           : 6 8
ExtDef               : 2
ExtDefList           : 1 2
FunDec               : 5
OptTag               : 11
ParamDec             : 20 21
Program              : 0
Specifier            : 4 5 6 22 34 64
Stmt                 : 24 28 29 30 30
StmtList             : 23 24
StructSpecifier      : 10
Tag                  : 12
VarDec               : 7 8 17 22 37 38
VarList              : 18 20
empty                : 3 14 25 33

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . ExtDefList
    (2) ExtDefList -> . ExtDef ExtDefList
    (3) ExtDefList -> . empty
    (4) ExtDef -> . Specifier SEMI
    (5) ExtDef -> . Specifier FunDec CompSt
    (6) ExtDef -> . Specifier ExtDecList SEMI
    (60) ExtDef -> . error SEMI
    (59) empty -> .
    (9) Specifier -> . TYPE
    (10) Specifier -> . StructSpecifier
    (11) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (12) StructSpecifier -> . STRUCT Tag

    error           shift and go to state 9
    $end            reduce using rule 59 (empty -> .)
    TYPE            shift and go to state 7
    STRUCT          shift and go to state 3

    empty                          shift and go to state 2
    Program                        shift and go to state 4
    ExtDefList                     shift and go to state 6
    StructSpecifier                shift and go to state 5
    Specifier                      shift and go to state 1
    ExtDef                         shift and go to state 8

state 1

    (4) ExtDef -> Specifier . SEMI
    (5) ExtDef -> Specifier . FunDec CompSt
    (6) ExtDef -> Specifier . ExtDecList SEMI
    (18) FunDec -> . ID LP VarList RP
    (19) FunDec -> . ID LP RP
    (61) FunDec -> . error RP
    (7) ExtDecList -> . VarDec
    (8) ExtDecList -> . VarDec COMMA ExtDecList
    (16) VarDec -> . ID
    (17) VarDec -> . VarDec LB INT RB

    SEMI            shift and go to state 10
    ID              shift and go to state 14
    error           shift and go to state 13

    FunDec                         shift and go to state 15
    ExtDecList                     shift and go to state 11
    VarDec                         shift and go to state 12

state 2

    (3) ExtDefList -> empty .

    $end            reduce using rule 3 (ExtDefList -> empty .)


state 3

    (11) StructSpecifier -> STRUCT . OptTag LC DefList RC
    (12) StructSpecifier -> STRUCT . Tag
    (13) OptTag -> . ID
    (14) OptTag -> . empty
    (15) Tag -> . ID
    (59) empty -> .

    ID              shift and go to state 18
    LC              reduce using rule 59 (empty -> .)

    OptTag                         shift and go to state 17
    empty                          shift and go to state 16
    Tag                            shift and go to state 19

state 4

    (0) S' -> Program .



state 5

    (10) Specifier -> StructSpecifier .

    ID              reduce using rule 10 (Specifier -> StructSpecifier .)
    error           reduce using rule 10 (Specifier -> StructSpecifier .)
    SEMI            reduce using rule 10 (Specifier -> StructSpecifier .)


state 6

    (1) Program -> ExtDefList .

    $end            reduce using rule 1 (Program -> ExtDefList .)


state 7

    (9) Specifier -> TYPE .

    ID              reduce using rule 9 (Specifier -> TYPE .)
    error           reduce using rule 9 (Specifier -> TYPE .)
    SEMI            reduce using rule 9 (Specifier -> TYPE .)


state 8

    (2) ExtDefList -> ExtDef . ExtDefList
    (2) ExtDefList -> . ExtDef ExtDefList
    (3) ExtDefList -> . empty
    (4) ExtDef -> . Specifier SEMI
    (5) ExtDef -> . Specifier FunDec CompSt
    (6) ExtDef -> . Specifier ExtDecList SEMI
    (60) ExtDef -> . error SEMI
    (59) empty -> .
    (9) Specifier -> . TYPE
    (10) Specifier -> . StructSpecifier
    (11) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (12) StructSpecifier -> . STRUCT Tag

    error           shift and go to state 9
    $end            reduce using rule 59 (empty -> .)
    TYPE            shift and go to state 7
    STRUCT          shift and go to state 3

    ExtDefList                     shift and go to state 20
    empty                          shift and go to state 2
    ExtDef                         shift and go to state 8
    Specifier                      shift and go to state 1
    StructSpecifier                shift and go to state 5

state 9

    (60) ExtDef -> error . SEMI

    SEMI            shift and go to state 21


state 10

    (4) ExtDef -> Specifier SEMI .

    error           reduce using rule 4 (ExtDef -> Specifier SEMI .)
    TYPE            reduce using rule 4 (ExtDef -> Specifier SEMI .)
    STRUCT          reduce using rule 4 (ExtDef -> Specifier SEMI .)
    $end            reduce using rule 4 (ExtDef -> Specifier SEMI .)


state 11

    (6) ExtDef -> Specifier ExtDecList . SEMI

    SEMI            shift and go to state 22


state 12

    (7) ExtDecList -> VarDec .
    (8) ExtDecList -> VarDec . COMMA ExtDecList
    (17) VarDec -> VarDec . LB INT RB

    SEMI            reduce using rule 7 (ExtDecList -> VarDec .)
    COMMA           shift and go to state 24
    LB              shift and go to state 23


state 13

    (61) FunDec -> error . RP

    RP              shift and go to state 25


state 14

    (18) FunDec -> ID . LP VarList RP
    (19) FunDec -> ID . LP RP
    (16) VarDec -> ID .

    LP              shift and go to state 26
    COMMA           reduce using rule 16 (VarDec -> ID .)
    LB              reduce using rule 16 (VarDec -> ID .)
    SEMI            reduce using rule 16 (VarDec -> ID .)


state 15

    (5) ExtDef -> Specifier FunDec . CompSt
    (23) CompSt -> . LC DefList StmtList RC
    (62) CompSt -> . error RC

    LC              shift and go to state 27
    error           shift and go to state 29

    CompSt                         shift and go to state 28

state 16

    (14) OptTag -> empty .

    LC              reduce using rule 14 (OptTag -> empty .)


state 17

    (11) StructSpecifier -> STRUCT OptTag . LC DefList RC

    LC              shift and go to state 30


state 18

    (13) OptTag -> ID .
    (15) Tag -> ID .

    LC              reduce using rule 13 (OptTag -> ID .)
    SEMI            reduce using rule 15 (Tag -> ID .)
    ID              reduce using rule 15 (Tag -> ID .)
    error           reduce using rule 15 (Tag -> ID .)


state 19

    (12) StructSpecifier -> STRUCT Tag .

    SEMI            reduce using rule 12 (StructSpecifier -> STRUCT Tag .)
    ID              reduce using rule 12 (StructSpecifier -> STRUCT Tag .)
    error           reduce using rule 12 (StructSpecifier -> STRUCT Tag .)


state 20

    (2) ExtDefList -> ExtDef ExtDefList .

    $end            reduce using rule 2 (ExtDefList -> ExtDef ExtDefList .)


state 21

    (60) ExtDef -> error SEMI .

    error           reduce using rule 60 (ExtDef -> error SEMI .)
    TYPE            reduce using rule 60 (ExtDef -> error SEMI .)
    STRUCT          reduce using rule 60 (ExtDef -> error SEMI .)
    $end            reduce using rule 60 (ExtDef -> error SEMI .)


state 22

    (6) ExtDef -> Specifier ExtDecList SEMI .

    error           reduce using rule 6 (ExtDef -> Specifier ExtDecList SEMI .)
    TYPE            reduce using rule 6 (ExtDef -> Specifier ExtDecList SEMI .)
    STRUCT          reduce using rule 6 (ExtDef -> Specifier ExtDecList SEMI .)
    $end            reduce using rule 6 (ExtDef -> Specifier ExtDecList SEMI .)


state 23

    (17) VarDec -> VarDec LB . INT RB

    INT             shift and go to state 31


state 24

    (8) ExtDecList -> VarDec COMMA . ExtDecList
    (7) ExtDecList -> . VarDec
    (8) ExtDecList -> . VarDec COMMA ExtDecList
    (16) VarDec -> . ID
    (17) VarDec -> . VarDec LB INT RB

    ID              shift and go to state 33

    VarDec                         shift and go to state 12
    ExtDecList                     shift and go to state 32

state 25

    (61) FunDec -> error RP .

    LC              reduce using rule 61 (FunDec -> error RP .)
    error           reduce using rule 61 (FunDec -> error RP .)


state 26

    (18) FunDec -> ID LP . VarList RP
    (19) FunDec -> ID LP . RP
    (20) VarList -> . ParamDec COMMA VarList
    (21) VarList -> . ParamDec
    (22) ParamDec -> . Specifier VarDec
    (9) Specifier -> . TYPE
    (10) Specifier -> . StructSpecifier
    (11) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (12) StructSpecifier -> . STRUCT Tag

    RP              shift and go to state 35
    TYPE            shift and go to state 7
    STRUCT          shift and go to state 3

    ParamDec                       shift and go to state 36
    StructSpecifier                shift and go to state 5
    Specifier                      shift and go to state 34
    VarList                        shift and go to state 37

state 27

    (23) CompSt -> LC . DefList StmtList RC
    (32) DefList -> . Def DefList
    (33) DefList -> . empty
    (34) Def -> . Specifier DecList SEMI
    (64) Def -> . Specifier error SEMI
    (59) empty -> .
    (9) Specifier -> . TYPE
    (10) Specifier -> . StructSpecifier
    (11) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (12) StructSpecifier -> . STRUCT Tag

    IF              reduce using rule 59 (empty -> .)
    WHILE           reduce using rule 59 (empty -> .)
    RETURN          reduce using rule 59 (empty -> .)
    error           reduce using rule 59 (empty -> .)
    LP              reduce using rule 59 (empty -> .)
    MINUS           reduce using rule 59 (empty -> .)
    NOT             reduce using rule 59 (empty -> .)
    ID              reduce using rule 59 (empty -> .)
    INT             reduce using rule 59 (empty -> .)
    FLOAT           reduce using rule 59 (empty -> .)
    LC              reduce using rule 59 (empty -> .)
    RC              reduce using rule 59 (empty -> .)
    TYPE            shift and go to state 7
    STRUCT          shift and go to state 3

    empty                          shift and go to state 39
    StructSpecifier                shift and go to state 5
    Def                            shift and go to state 40
    Specifier                      shift and go to state 38
    DefList                        shift and go to state 41

state 28

    (5) ExtDef -> Specifier FunDec CompSt .

    error           reduce using rule 5 (ExtDef -> Specifier FunDec CompSt .)
    TYPE            reduce using rule 5 (ExtDef -> Specifier FunDec CompSt .)
    STRUCT          reduce using rule 5 (ExtDef -> Specifier FunDec CompSt .)
    $end            reduce using rule 5 (ExtDef -> Specifier FunDec CompSt .)


state 29

    (62) CompSt -> error . RC
